--- a/demo/common.css
+++ b/demo/common.css
@@ -73,12 +73,9 @@ dark-mode-toggle {
   --dark-mode-toggle-legend-font: bold 0.85rem 'Helvetica';
   --dark-mode-toggle-label-font: 0.75rem 'Helvetica';
   --dark-mode-toggle-color: var(--text-color);
+  --dark-mode-toggle-background-color: var(--background-color);
   position: absolute;
   right: 1rem;
-}
-
-dark-mode-toggle:first-of-type[mode="dark"]::before {
-
 }
 
 dark-mode-toggle#dmt1 {
