Add remember functionality

--- a/demo/common.css
+++ b/demo/common.css
@@ -80,11 +80,24 @@ div {
 
 aside {
   position: absolute;
-  top: 1rem;
   right: 0;
-  background: var(--background-color);
   padding: 0.5rem;
-  text-align: center;
+}
+
+aside:nth-of-type(1) {
+  top: 0;
+}
+
+aside:nth-of-type(2) {
+  top: 3rem;
+}
+
+aside:nth-of-type(3) {
+  top: 7rem;
+}
+
+aside:nth-of-type(4) {
+  top: 12rem;
 }
 
 #content select,
@@ -95,12 +108,35 @@ aside {
 }
 
 dark-mode-toggle {
-  --dark-mode-toggle-dark-icon: url("moon.png");
-  --dark-mode-toggle-light-icon: url("sun.png");
+  --dark-mode-toggle-remember-icon-checked: url("checked.svg");
+  --dark-mode-toggle-remember-icon-unchecked: url("unchecked.svg");
+  --dark-mode-toggle-remember-font: 0.75rem 'Helvetica';
   --dark-mode-toggle-legend-font: bold 0.85rem 'Helvetica';
-  --dark-mode-toggle-label-font: 0.75rem 'Helvetica';
+  --dark-mode-toggle-label-font: 0.85rem 'Helvetica';
   --dark-mode-toggle-color: var(--text-color);
   --dark-mode-toggle-background-color: none;
 
   margin-bottom: 1.5rem;
+}
+
+#dark-mode-toggle-1,
+#dark-mode-toggle-3,
+#dark-mode-toggle-4 {
+  --dark-mode-toggle-dark-icon: url("moon.png");
+  --dark-mode-toggle-light-icon: url("sun.png");
+}
+
+#dark-mode-toggle-2 {
+  --dark-mode-toggle-light-icon: url("sun.svg");
+  --dark-mode-toggle-dark-icon: url("moon.svg");
+  --dark-mode-toggle-icon-filter: invert(100%);
+}
+
+#dark-mode-toggle-3 {
+  --dark-mode-toggle-remember-filter: invert(100%);
+}
+
+#dark-mode-toggle-4 {
+  --dark-mode-toggle-active-mode-background-color: var(--accent-color);
+  --dark-mode-toggle-remember-filter: invert(100%);
 }
