--- a/demo/common.css
+++ b/demo/common.css
@@ -15,6 +15,7 @@
  * limitations under the License.
  */
 :root {
+  color-scheme: light dark;
   --heading-color: red;
   --duration: 0.5s;
   --timing: ease;
