--- a/demo/dark.css
+++ b/demo/dark.css
@@ -15,6 +15,8 @@
  * limitations under the License.
  */
 :root {
+  color-scheme: dark; /* stylelint-disable-line property-no-unknown */
+
   --background-color: rgb(15, 15, 15);
   --text-color: rgb(240, 240, 240);
   --shadow-color: rgba(240, 240, 240, 0.5);
@@ -31,26 +33,4 @@ img {
 
 a {
   color: yellow;
-}
-
-/* If no dark mode user agent stylesheet exists, emulate it */
-select,
-input,
-button,
-option {
-  color: var(--text-color);
-  background-color: var(--background-color);
-  border-width: 1px;
-  border-radius: 1px;
-}
-
-/* Else, use the user agent stylesheet */
-@media (prefers-color-scheme: dark) {
-  select,
-  input,
-  button,
-  option {
-    color: unset;
-    background-color: unset;
-  }
 }
