--- a/demo/dark.css
+++ b/demo/dark.css
@@ -17,10 +17,10 @@
 :root {
   color-scheme: dark; /* stylelint-disable-line property-no-unknown */
 
-  --background-color: rgb(15, 15, 15);
-  --text-color: rgb(240, 240, 240);
-  --shadow-color: rgba(240, 240, 240, 0.5);
-  --accent-color: rgba(0, 0, 240, 0.5);
+  --background-color: rgb(15 15 15);
+  --text-color: rgb(240 240 240);
+  --shadow-color: rgb(240 240 240 / 50%);
+  --accent-color: rgb(0 0 240 / 50%);
 }
 
 img {
