--- a/demo/common.css
+++ b/demo/common.css
@@ -103,17 +103,17 @@ aside:nth-of-type(5) {
 
 #content select,
 #content button,
-#content input[type="text"],
-#content input[type="search"] {
+#content input[type='text'],
+#content input[type='search'] {
   width: 15rem;
 }
 
 dark-mode-toggle {
-  --dark-mode-toggle-remember-icon-checked: url("checked.svg");
-  --dark-mode-toggle-remember-icon-unchecked: url("unchecked.svg");
-  --dark-mode-toggle-remember-font: 0.75rem "Helvetica";
-  --dark-mode-toggle-legend-font: bold 0.85rem "Helvetica";
-  --dark-mode-toggle-label-font: 0.85rem "Helvetica";
+  --dark-mode-toggle-remember-icon-checked: url('checked.svg');
+  --dark-mode-toggle-remember-icon-unchecked: url('unchecked.svg');
+  --dark-mode-toggle-remember-font: 0.75rem 'Helvetica';
+  --dark-mode-toggle-legend-font: bold 0.85rem 'Helvetica';
+  --dark-mode-toggle-label-font: 0.85rem 'Helvetica';
   --dark-mode-toggle-color: var(--text-color);
   --dark-mode-toggle-background-color: none;
 
@@ -121,21 +121,21 @@ dark-mode-toggle {
 }
 
 #dark-mode-toggle-1 {
-  --dark-mode-toggle-dark-icon: url("sun.png");
-  --dark-mode-toggle-light-icon: url("moon.png");
+  --dark-mode-toggle-dark-icon: url('sun.png');
+  --dark-mode-toggle-light-icon: url('moon.png');
 }
 
 #dark-mode-toggle-2 {
-  --dark-mode-toggle-dark-icon: url("sun.svg");
-  --dark-mode-toggle-light-icon: url("moon.svg");
+  --dark-mode-toggle-dark-icon: url('sun.svg');
+  --dark-mode-toggle-light-icon: url('moon.svg');
   --dark-mode-toggle-icon-size: 2rem;
   --dark-mode-toggle-icon-filter: invert(100%);
 }
 
 #dark-mode-toggle-3,
 #dark-mode-toggle-4 {
-  --dark-mode-toggle-dark-icon: url("moon.png");
-  --dark-mode-toggle-light-icon: url("sun.png");
+  --dark-mode-toggle-dark-icon: url('moon.png');
+  --dark-mode-toggle-light-icon: url('sun.png');
 }
 
 #dark-mode-toggle-3 {
