--- a/demo/common.css
+++ b/demo/common.css
@@ -28,7 +28,8 @@
 
 body {
   margin: 0;
-  transition: color var(--duration) var(--timing),
+  transition:
+    color var(--duration) var(--timing),
     background-color var(--duration) var(--timing);
   font-family: sans-serif;
   font-size: 12pt;
